--- a/index.html
+++ b/index.html
@@ -386,12 +386,7 @@
                     <div class="stat-item">
                         <div class="stat-icon">📚</div>
                         <div class="stat-label">Class Hours</div>
-                        <div class="stat-value">12 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">💻</div>
-                        <div class="stat-label">Lab Hours</div>
-                        <div class="stat-value">3 hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -488,12 +483,7 @@
                     <div class="stat-item">
                         <div class="stat-icon">📚</div>
                         <div class="stat-label">Class Hours</div>
-                        <div class="stat-value">12 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">💻</div>
-                        <div class="stat-label">Lab Hours</div>
-                        <div class="stat-value">3 hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -588,12 +578,7 @@
                     <div class="stat-item">
                         <div class="stat-icon">📚</div>
                         <div class="stat-label">Class Hours</div>
-                        <div class="stat-value">12 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">💻</div>
-                        <div class="stat-label">Lab Hours</div>
-                        <div class="stat-value">3 hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -688,12 +673,7 @@
                     <div class="stat-item">
                         <div class="stat-icon">📚</div>
                         <div class="stat-label">Class Hours</div>
-                        <div class="stat-value">12 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">💻</div>
-                        <div class="stat-label">Lab Hours</div>
-                        <div class="stat-value">3 hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -788,14 +768,9 @@
 
                 <div class="week-stats">
                     <div class="stat-item">
-                        <div class="stat-icon">🔒</div>
-                        <div class="stat-label">Security Hours</div>
-                        <div class="stat-value">9 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">🛡️</div>
-                        <div class="stat-label">Lab Sessions</div>
-                        <div class="stat-value">3 sessions</div>
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -890,14 +865,9 @@
                 </div>
                 <div class="week-stats">
                     <div class="stat-item">
-                        <div class="stat-icon">🔒</div>
-                        <div class="stat-label">Security Hours</div>
-                        <div class="stat-value">9 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">🛡️</div>
-                        <div class="stat-label">Lab Sessions</div>
-                        <div class="stat-value">3 sessions</div>
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -990,14 +960,9 @@
                 </div>
                 <div class="week-stats">
                     <div class="stat-item">
-                        <div class="stat-icon">🔒</div>
-                        <div class="stat-label">Security Hours</div>
-                        <div class="stat-value">9 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">🛡️</div>
-                        <div class="stat-label">Lab Sessions</div>
-                        <div class="stat-value">3 sessions</div>
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -1090,14 +1055,9 @@
                 </div>
                 <div class="week-stats">
                     <div class="stat-item">
-                        <div class="stat-icon">🔒</div>
-                        <div class="stat-label">Security Hours</div>
-                        <div class="stat-value">9 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">🛡️</div>
-                        <div class="stat-label">Lab Sessions</div>
-                        <div class="stat-value">3 sessions</div>
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -1192,14 +1152,9 @@
 
                 <div class="week-stats">
                     <div class="stat-item">
-                        <div class="stat-icon">🖥️</div>
-                        <div class="stat-label">Server Hours</div>
-                        <div class="stat-value">9 hours</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">⚙️</div>
-                        <div class="stat-label">Lab Sessions</div>
-                        <div class="stat-value">3 sessions</div>
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">✨</div>
@@ -1353,19 +1308,14 @@
 
                 <div class="week-stats">
                     <div class="stat-item">
-                        <div class="stat-icon">🌐</div>
-                        <div class="stat-label">Web Dev Hours</div>
-                        <div class="stat-value">9 hours</div>
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-icon">💻</div>
-                        <div class="stat-label">Lab Sessions</div>
-                        <div class="stat-value">3 sessions</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-icon">🎃</div>
-                        <div class="stat-label">Halloween</div>
-                        <div class="stat-value">Free!</div>
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Free Days</div>
+                        <div class="stat-value">2 days</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-icon">📖</div>
