--- a/index.html
+++ b/index.html
@@ -362,42 +362,20 @@
         }
         body.dark-mode .week-header {
             background: linear-gradient(135deg, #232526, #414345);
-            color: #fff;
+            color: #6cb8ff; /* bluish text for week header */
         }
-        body.dark-mode .day-column {
-            background: #232526;
-            color: #e0e0e0;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.18);
+        body.dark-mode .week-title,
+        body.dark-mode .week-dates {
+            color: #6cb8ff; /* bluish for week title and dates */
         }
-        body.dark-mode .day-header {
-            background: #111418;
-            color: #fff;
+        body.dark-mode .class-time {
+            color: #6cb8ff; /* bluish for class time */
         }
-        body.dark-mode .class-block {
-            background: #2d2d2d !important;
-            color: #e0e0e0;
-            border-color: #444 !important;
-        }
-        body.dark-mode .class-block::before {
-            filter: grayscale(0.2) brightness(0.8);
-        }
-        body.dark-mode .free-time {
-            background: linear-gradient(135deg, #232526, #414345);
-            color: #27ae60;
-            border-color: #27ae60;
-        }
-        body.dark-mode .week-stats {
-            background: rgba(34, 34, 34, 0.97);
-        }
-        body.dark-mode .stat-item {
-            background: linear-gradient(135deg, #232526, #414345);
-            color: #e0e0e0;
-        }
-        body.dark-mode .stat-label {
-            color: #b0b0b0;
+        body.dark-mode .class-name {
+            color: #8fd3ff; /* lighter bluish for class name */
         }
         body.dark-mode .stat-value {
-            color: #fff;
+            color: #6cb8ff; /* bluish for stat values */
         }
         body.dark-mode .nav-btn {
             background: #444;
@@ -405,7 +383,7 @@
         }
         body.dark-mode .nav-btn.active {
             background: #e74c3c;
-            color: #fff;
+            color: #6cb8ff; /* bluish for active nav button text */
         }
         body.dark-mode .nav-btn:hover {
             background: #666;
