--- a/index.html
+++ b/index.html
@@ -358,32 +358,32 @@
         }
         body.dark-mode .header {
             background: linear-gradient(135deg, #232526, #414345);
-            color: #fff;
+            color: #e0e0e0;
         }
         body.dark-mode .week-header {
             background: linear-gradient(135deg, #232526, #414345);
-            color: #6cb8ff; /* bluish text for week header */
+            color: #6cb8ff;
         }
         body.dark-mode .week-title,
         body.dark-mode .week-dates {
-            color: #6cb8ff; /* bluish for week title and dates */
+            color: #6cb8ff;
         }
         body.dark-mode .class-time {
-            color: #6cb8ff; /* bluish for class time */
+            color: #6cb8ff;
         }
         body.dark-mode .class-name {
-            color: #8fd3ff; /* lighter bluish for class name */
+            color: #8fd3ff;
         }
         body.dark-mode .stat-value {
-            color: #6cb8ff; /* bluish for stat values */
+            color: #6cb8ff;
         }
         body.dark-mode .nav-btn {
             background: #444;
-            color: #fff;
+            color: #e0e0e0;
         }
         body.dark-mode .nav-btn.active {
             background: #e74c3c;
-            color: #6cb8ff; /* bluish for active nav button text */
+            color: #6cb8ff;
         }
         body.dark-mode .nav-btn:hover {
             background: #666;
@@ -392,9 +392,35 @@
             background: rgba(44, 62, 80, 0.7);
             color: #b0b0b0;
         }
+        body.dark-mode .class-block {
+            background: #2d2d2d !important;
+            color: #e0e0e0;
+            border-color: #444 !important;
+        }
+        body.dark-mode .class-block::before {
+            filter: grayscale(0.2) brightness(0.8);
+        }
+        body.dark-mode .free-time {
+            background: linear-gradient(135deg, #232526, #414345);
+            color: #27ae60;
+            border-color: #27ae60;
+        }
+        body.dark-mode .week-stats {
+            background: rgba(34, 34, 34, 0.97);
+        }
+        body.dark-mode .stat-item {
+            background: linear-gradient(135deg, #232526, #414345);
+            color: #e0e0e0;
+        }
+        body.dark-mode .stat-label {
+            color: #b0b0b0;
+        }
+        body.dark-mode .stat-value {
+            color: #6cb8ff;
+        }
         body.dark-mode .class-block[data-tooltip]:hover::after {
             background: #111418;
-            color: #fff;
+            color: #6cb8ff;
         }
         body.dark-mode .class-block[data-tooltip]:hover::before {
             border-top-color: #111418;
