--- a/index.html
+++ b/index.html
@@ -369,13 +369,18 @@
             color: #6cb8ff;
         }
         body.dark-mode .class-time {
-            color: #6cb8ff;
+            color: #ffb347; /* orange for class time */
         }
         body.dark-mode .class-name {
-            color: #8fd3ff;
+            color: #ffd700; /* gold for class name */
         }
         body.dark-mode .stat-value {
-            color: #6cb8ff;
+            color: #ffb347; /* orange for stat values */
+        }
+        body.dark-mode .class-block {
+            background: #232a36 !important; /* deeper blue-gray */
+            color: #ffd700; /* gold text for class block */
+            border-color: #444 !important;
         }
         body.dark-mode .nav-btn {
             background: #444;
