--- a/index.html
+++ b/index.html
@@ -1713,6 +1713,292 @@
                     </div>
                 </div>
             </div>
+            <!-- Week 14: Nov 3 - Nov 9 (same as week 13) -->
+            <div class="week-section" id="week14">
+                <div class="week-header">
+                    <div class="week-title">Week 14 - Advanced Web Application Development</div>
+                    <div class="week-dates">November 3 - November 9, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item">
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Free Days</div>
+                        <div class="stat-value">4 days</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📖</div>
+                        <div class="stat-label">Focus Area</div>
+                        <div class="stat-value">WebDev</div>
+                    </div>
+                </div>
+
+                <div class="week-grid">
+                    <div class="day-column">
+                        <div class="day-header">Monday<div class="day-date">Nov 3</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="React & Node.js">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="Full-stack project">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Tuesday<div class="day-date">Nov 4</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="Node.js & Express">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="API development lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Wednesday<div class="day-date">Nov 5</div></div>
+                        <div class="day-content">
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Thursday<div class="day-date">Nov 6</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="React Router & Redux">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="State management lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Friday<div class="day-date">Nov 7</div></div>
+                        <div class="day-content">
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Saturday<div class="day-date">Nov 8</div></div>
+                        <div class="day-content">
+                            <div class="free-time">🎉 Weekend<br>Fully Available</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Sunday<div class="day-date">Nov 9</div></div>
+                        <div class="day-content">
+                            <div class="free-time">🎉 Weekend<br>Fully Available</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Week 15: Nov 10 - Nov 16 (same as week 13) -->
+            <div class="week-section" id="week15">
+                <div class="week-header">
+                    <div class="week-title">Week 15 - Advanced Web Application Development</div>
+                    <div class="week-dates">November 10 - November 16, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item">
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Free Days</div>
+                        <div class="stat-value">4 days</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📖</div>
+                        <div class="stat-label">Focus Area</div>
+                        <div class="stat-value">WebDev</div>
+                    </div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column">
+                        <div class="day-header">Monday<div class="day-date">Nov 10</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="React & Node.js">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="Full-stack project">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Tuesday<div class="day-date">Nov 11</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="Node.js & Express">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="API development lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Wednesday<div class="day-date">Nov 12</div></div>
+                        <div class="day-content">
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Thursday<div class="day-date">Nov 13</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="React Router & Redux">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="State management lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Friday<div class="day-date">Nov 14</div></div>
+                        <div class="day-content">
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Saturday<div class="day-date">Nov 15</div></div>
+                        <div class="day-content">
+                            <div class="free-time">🎉 Weekend<br>Fully Available</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Sunday<div class="day-date">Nov 16</div></div>
+                        <div class="day-content">
+                            <div class="free-time">🎉 Weekend<br>Fully Available</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Week 16: Nov 17 - Nov 23 (same as week 13) -->
+            <div class="week-section" id="week16">
+                <div class="week-header">
+                    <div class="week-title">Week 16 - Advanced Web Application Development</div>
+                    <div class="week-dates">November 17 - November 23, 2025</div>
+                </div>
+                <div class="week-stats">
+                    <div class="stat-item">
+                        <div class="stat-icon">📚</div>
+                        <div class="stat-label">Class Hours</div>
+                        <div class="stat-value">16 hours</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Free Days</div>
+                        <div class="stat-value">4 days</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">📖</div>
+                        <div class="stat-label">Focus Area</div>
+                        <div class="stat-value">WebDev</div>
+                    </div>
+                </div>
+                <div class="week-grid">
+                    <div class="day-column">
+                        <div class="day-header">Monday<div class="day-date">Nov 17</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="React & Node.js">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="Full-stack project">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Tuesday<div class="day-date">Nov 18</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="Node.js & Express">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="API development lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Wednesday<div class="day-date">Nov 19</div></div>
+                        <div class="day-content">
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Thursday<div class="day-date">Nov 20</div></div>
+                        <div class="day-content">
+                            <div class="class-block web-class" data-tooltip="React Router & Redux">
+                                <div class="class-time">5:30 PM - 8:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">Lecture</div>
+                            </div>
+                            <div class="class-block web-class" data-tooltip="State management lab">
+                                <div class="class-time">8:30 PM - 9:30 PM</div>
+                                <div class="class-name">Advanced Web Development</div>
+                                <div class="class-type">PC Lab</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Friday<div class="day-date">Nov 21</div></div>
+                        <div class="day-content">
+                            <div class="free-time">✨ Free Day<br>Available for Work</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Saturday<div class="day-date">Nov 22</div></div>
+                        <div class="day-content">
+                            <div class="free-time">🎉 Weekend<br>Fully Available</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Sunday<div class="day-date">Nov 23</div></div>
+                        <div class="day-content">
+                            <div class="free-time">🎉 Weekend<br>Fully Available</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
