--- a/index.html
+++ b/index.html
@@ -2041,7 +2041,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </html>
 
 <!-- Somewhere in your content -->
-<h2>Scan to visit my GitHub Pages site</h2>
+<h2>Scan to visit my GitHub Availability Pages site</h2>
 <div id="qrcode"></div>
 <!-- QRCode.js library -->
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
