--- a/index.html
+++ b/index.html
@@ -2041,8 +2041,23 @@ document.addEventListener('DOMContentLoaded', function() {
 </html>
 
 <!-- Somewhere in your content -->
-<h2>Scan to visit my GitHub Availability Pages site</h2>
+<h2>Scan or Click to visit my GitHub Availability Pages site</h2>
 <div id="qrcode"></div>
+<!-- Visit Site Button -->
+<a href="https://htayhlaing-win.github.io/availability/" target="_blank">
+    <button style="
+        margin-top: 10px;
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color: #0078d4;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;">
+        Visit My GitHub Page
+    </button>
+</a>
+
 <!-- QRCode.js library -->
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 <script>
