--- a/index.html
+++ b/index.html
@@ -2059,7 +2059,8 @@ document.addEventListener('DOMContentLoaded', function() {
 </a>
 
 <!-- QRCode.js library -->
-<script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
+<script src="qrcode.min.js"></script>
+
 <script>
   // Replace with your actual link
     var myURL = "https://htayhlaing-win.github.io/availability/";
