--- a/index.html
+++ b/index.html
@@ -2041,7 +2041,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </html>
 
 <!-- Somewhere in your content -->
-<h2>Scan or Click to visit my GitHub Availability Pages site</h2>
+<h2 style="font-size: 18px;">Scan or Click to visit my GitHub Availability Pages site</h2>
 <div id="qrcode"></div>
 <!-- Visit Site Button -->
 <a href="https://htayhlaing-win.github.io/availability/" target="_blank">
