--- a/index.html
+++ b/index.html
@@ -2040,27 +2040,17 @@ document.addEventListener('DOMContentLoaded', function() {
 </body>
 </html>
 
-<style>
-.qr-title {
+<h2 style="
     font-size: 18px;
-    font-weight: normal;
-    text-align: center; /* Optional: center it */
-    position: relative;
+    color: white;
+    padding: 10px 20px;
+    background: linear-gradient(90deg, #0078d4, #00aaff);
+    border-radius: 6px;
     display: inline-block;
-    padding-bottom: 6px;
-}
-.qr-title::after {
-    content: "";
-    display: block;
-    width: 60px;
-    height: 3px;
-    background-color: #0078d4; /* same blue as button */
-    margin: 6px auto 0;
-    border-radius: 2px;
-}
-</style>
+">
+    Scan or Click to visit my GitHub Availability Pages site
+</h2>
 
-<h2 class="qr-title">Scan or Click to visit my GitHub Availability Pages site</h2>
 
 <div id="qrcode"></div>
 <!-- Visit Site Button -->
