--- a/index.html
+++ b/index.html
@@ -2083,3 +2083,17 @@ document.addEventListener('DOMContentLoaded', function() {
         correctLevel : QRCode.CorrectLevel.H
     });
 </script>
+
+<!-- linkedin Profile Qr Code-->
+<script>
+  // Replace with your actual link
+    var myURL = "http://linkedin.com/in/htayhlaing-win";
+    new QRCode(document.getElementById("qrcode"), {
+        text: myURL,
+        width: 128,
+        height: 128,
+        colorDark : "#000000",
+        colorLight : "#ffffff",
+        correctLevel : QRCode.CorrectLevel.H
+    });
+</script>
