--- a/index.html
+++ b/index.html
@@ -2055,7 +2055,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <div style="text-align: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.08);">
         <h3 style="margin-bottom: 15px; color: #0077b5; font-size: 16px;">💼 LinkedIn Profile</h3>
         <div id="qrcode-linkedin"></div>
-        <a href="https://linkedin.com/in/htayhlaing-win" target="_blank">
+        <a href="https://www.linkedin.com/in/htay-hlaing-win" target="_blank">
             <button style="margin-top: 12px; padding: 8px 16px; font-size: 14px; background-color: #0077b5; color: white; border: none; border-radius: 6px; cursor: pointer;">Connect</button>
         </a>
     </div>
