--- a/index.html
+++ b/index.html
@@ -2062,9 +2062,9 @@ document.addEventListener('DOMContentLoaded', function() {
 </div>
 
 
-<div id="qrcode"></div>
-<!-- Visit Site Button -->
-<a href="https://htayhlaing-win.github.io/availability/" target="_blank">
+<!-- <div id="qrcode"></div>
+    Visit Site Button -->
+<!-- <a href="https://htayhlaing-win.github.io/availability/" target="_blank">
     <button style="
         margin-top: 10px;
         padding: 10px 20px;
@@ -2076,7 +2076,7 @@ document.addEventListener('DOMContentLoaded', function() {
         cursor: pointer;">
         Visit My GitHub Page
     </button>
-</a>
+</a> --> 
 
 <!-- QRCode.js library -->
 <script src="qrcode.min.js"></script>
