--- a/index.html
+++ b/index.html
@@ -2013,6 +2013,112 @@
                     </div>
                 </div>
             </div>
+            <!-- Summer Break Period: Nov 24 onwards -->
+            <div class="week-section" id="summer1">
+                <div class="week-header" style="background: linear-gradient(135deg, #ff9a56, #ff6b6b);">
+                    <div class="week-title">🏖️ Summer Break - Week 1</div>
+                    <div class="week-dates">November 24 - November 30, 2025</div>
+                </div>
+
+                <div class="week-stats">
+                    <div class="stat-item">
+                        <div class="stat-icon">🏖️</div>
+                        <div class="stat-label">Status</div>
+                        <div class="stat-value">Summer Break</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Free Days</div>
+                        <div class="stat-value">7 days</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">💼</div>
+                        <div class="stat-label">Availability</div>
+                        <div class="stat-value">100%</div>
+                    </div>
+                </div>
+
+                <div class="week-grid">
+                    <div class="day-column">
+                        <div class="day-header">Monday<div class="day-date">Nov 24</div></div>
+                        <div class="day-content">
+                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Tuesday<div class="day-date">Nov 25</div></div>
+                        <div class="day-content">
+                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Wednesday<div class="day-date">Nov 26</div></div>
+                        <div class="day-content">
+                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Thursday<div class="day-date">Nov 27</div></div>
+                        <div class="day-content">
+                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Friday<div class="day-date">Nov 28</div></div>
+                        <div class="day-content">
+                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Saturday<div class="day-date">Nov 29</div></div>
+                        <div class="day-content">
+                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+                        </div>
+                    </div>
+                    <div class="day-column">
+                        <div class="day-header">Sunday<div class="day-date">Nov 30</div></div>
+                        <div class="day-content">
+                            <div class="free-time" style="background: linear-gradient(135deg, #ffecd2, #fcb69f); border-color: #ff9a56;">🏖️ Summer Break<br>Fully Available All Day</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="week-section" id="summer2">
+                <div class="week-header" style="background: linear-gradient(135deg, #ff9a56, #ff6b6b);">
+                    <div class="week-title">🏖️ Summer Break - Ongoing</div>
+                    <div class="week-dates">December 2025 onwards</div>
+                </div>
+
+                <div class="week-stats">
+                    <div class="stat-item">
+                        <div class="stat-icon">🏖️</div>
+                        <div class="stat-label">Status</div>
+                        <div class="stat-value">Summer Break</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">✨</div>
+                        <div class="stat-label">Duration</div>
+                        <div class="stat-value">Ongoing</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-icon">💼</div>
+                        <div class="stat-label">Availability</div>
+                        <div class="stat-value">100%</div>
+                    </div>
+                </div>
+
+                <div style="text-align: center; padding: 60px 20px; background: linear-gradient(135deg, #ffecd2, #fcb69f); border-radius: 15px; margin: 20px 0;">
+                    <div style="font-size: 4em; margin-bottom: 20px;">🏖️</div>
+                    <h2 style="color: #d63031; margin-bottom: 15px;">Summer Break Period</h2>
+                    <p style="font-size: 1.2em; color: #636e72; margin-bottom: 20px;">Classes have ended for the semester!</p>
+                    <div style="background: white; padding: 20px; border-radius: 10px; display: inline-block; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+                        <h3 style="color: #00b894; margin-bottom: 10px;">💼 Fully Available for Work</h3>
+                        <p style="color: #2d3436; font-weight: 600;">Available 7 days a week, all day</p>
+                        <p style="color: #636e72; margin-top: 10px;">Perfect time for internships, projects, or full-time opportunities!</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 <script>
