--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         }
 
         .week-section.active {
-            display: block;
+            display: block !important;
         }
 
         @keyframes fadeIn {
@@ -475,7 +475,7 @@
             </div>
 
             <!-- Week 1: July 28 - Aug 3 -->
-            <div class="week-section active" id="week1">
+            <div class="week-section" id="week1">
                 <div class="week-header">
                     <div class="week-title">Object Oriented Programming</div>
                     <div class="week-dates">July 28 - August 3, 2025</div>
