--- a/index.html
+++ b/index.html
@@ -2129,7 +2129,10 @@ function showWeek(weekId, btn) {
     });
     // Show selected week section
     var week = document.getElementById(weekId);
-    if (week) week.classList.add('active');
+    if (week) {
+        week.classList.add('active');
+        week.style.display = 'block';  // Ensure visible on click
+    }
 
     // Remove active from all buttons
     document.querySelectorAll('.nav-btn').forEach(function(b) {
@@ -2137,6 +2140,11 @@ function showWeek(weekId, btn) {
     });
     // Add active to clicked button
     if (btn) btn.classList.add('active');
+    // Hide all week sections
+    document.querySelectorAll('.week-section').forEach(function(section) {
+        section.style.display = 'none';  // Actually hide the DOM element
+        section.classList.remove('active');
+    });
 }
 
 // Week date ranges
