--- a/index.html
+++ b/index.html
@@ -2126,21 +2126,21 @@ function showWeek(weekId, btn) {
     // Hide all week sections
     document.querySelectorAll('.week-section').forEach(function(section) {
         section.classList.remove('active');
+        section.style.display = 'none';
     });
+
     // Remove active from all buttons
     document.querySelectorAll('.nav-btn').forEach(function(b) {
         b.classList.remove('active');
     });
+
     // Show selected week section
     var week = document.getElementById(weekId);
     if (week) {
         week.classList.add('active');
-        week.style.display = 'block';  // Ensure visible on click
+        week.style.display = 'block';
     }
-    // Remove active from all buttons
-    document.querySelectorAll('.nav-btn').forEach(function(b) {
-        b.classList.remove('active');
-    });
+
     // Add active to clicked button
     if (btn) btn.classList.add('active');
 }
