--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
             <!-- Week 5: Aug 25 - Aug 31 (Cyber Security starts) -->
             <div class="week-section" id="week5">
                 <div class="week-header">
-                    <div class="week-title">Week 5 - Cyber Security Essentials</div>
+                    <div class="week-title">Week 1 - Cyber Security Essentials</div>
                     <div class="week-dates">August 25 - August 31, 2025</div>
                 </div>
 
@@ -959,7 +959,7 @@
             <!-- Week 6: Sep 1 - Sep 7 -->
             <div class="week-section" id="week6">
                 <div class="week-header">
-                    <div class="week-title">Week 6 - Cyber Security Essentials</div>
+                    <div class="week-title">Week 2 - Cyber Security Essentials</div>
                     <div class="week-dates">September 1 - September 7, 2025</div>
                 </div>
                 <div class="week-stats">
@@ -1054,7 +1054,7 @@
             <!-- Week 7: Sep 8 - Sep 14 -->
             <div class="week-section" id="week7">
                 <div class="week-header">
-                    <div class="week-title">Week 7 - Cyber Security Essentials</div>
+                    <div class="week-title">Week 3 - Cyber Security Essentials</div>
                     <div class="week-dates">September 8 - September 14, 2025</div>
                 </div>
                 <div class="week-stats">
@@ -1149,7 +1149,7 @@
             <!-- Week 8: Sep 15 - Sep 21 -->
             <div class="week-section" id="week8">
                 <div class="week-header">
-                    <div class="week-title">Week 8 - Cyber Security Essentials</div>
+                    <div class="week-title">week 4 - Cyber Security Essentials</div>
                     <div class="week-dates">September 15 - September 21, 2025</div>
                 </div>
                 <div class="week-stats">
@@ -1245,7 +1245,7 @@
             <!-- Week 9: Sep 29 - Oct 5 (Server Admin starts) -->
             <div class="week-section" id="week9">
                 <div class="week-header">
-                    <div class="week-title">Week 9 - Server Administration & Management</div>
+                    <div class="week-title">Week 1 - Server Administration & Management</div>
                     <div class="week-dates">September 29 - October 5, 2025</div>
                 </div>
 
@@ -1343,7 +1343,7 @@
             <!-- Week 10: Oct 6 - Oct 12 (same as week 9) -->
             <div class="week-section" id="week10">
                 <div class="week-header">
-                    <div class="week-title">Week 10 - Server Administration & Management</div>
+                    <div class="week-title">Week 2 - Server Administration & Management</div>
                     <div class="week-dates">October 6 - October 12, 2025</div>
                 </div>
                 <div class="week-stats">
@@ -1440,7 +1440,7 @@
             <!-- Week 11: Oct 13 - Oct 19 (same as week 9) -->
             <div class="week-section" id="week11">
                 <div class="week-header">
-                    <div class="week-title">Week 11 - Server Administration & Management</div>
+                    <div class="week-title">Week 3 - Server Administration & Management</div>
                     <div class="week-dates">October 13 - October 19, 2025</div>
                 </div>
                 <div class="week-stats">
@@ -1536,7 +1536,7 @@
             <!-- Week 12: Oct 20 - Oct 26 (same as week 9) -->
             <div class="week-section" id="week12">
                 <div class="week-header">
-                    <div class="week-title">Week 12 - Server Administration & Management</div>
+                    <div class="week-title">Week 4 - Server Administration & Management</div>
                     <div class="week-dates">October 20 - October 26, 2025</div>
                 </div>
                 <div class="week-stats">
@@ -1632,7 +1632,7 @@
             <!-- Week 13: Oct 27 - Nov 2 (Web Dev starts) -->
             <div class="week-section" id="week13">
                 <div class="week-header">
-                    <div class="week-title">Week 13 - Advanced Web Application Development</div>
+                    <div class="week-title">Week 1 - Advanced Web Application Development</div>
                     <div class="week-dates">October 27 - November 2, 2025</div>
                 </div>
 
@@ -1730,7 +1730,7 @@
             <!-- Week 14: Nov 3 - Nov 9 (same as week 13) -->
             <div class="week-section" id="week14">
                 <div class="week-header">
-                    <div class="week-title">Week 14 - Advanced Web Application Development</div>
+                    <div class="week-title">Week 2 - Advanced Web Application Development</div>
                     <div class="week-dates">November 3 - November 9, 2025</div>
                 </div>
                 <div class="week-stats">
@@ -1826,7 +1826,7 @@
             <!-- Week 15: Nov 10 - Nov 16 (same as week 13) -->
             <div class="week-section" id="week15">
                 <div class="week-header">
-                    <div class="week-title">Week 15 - Advanced Web Application Development</div>
+                    <div class="week-title">Week 3 - Advanced Web Application Development</div>
                     <div class="week-dates">November 10 - November 16, 2025</div>
                 </div>
                 <div class="week-stats">
@@ -1921,7 +1921,7 @@
             <!-- Week 16: Nov 17 - Nov 23 (same as week 13) -->
             <div class="week-section" id="week16">
                 <div class="week-header">
-                    <div class="week-title">Week 16 - Advanced Web Application Development</div>
+                    <div class="week-title">Week 4 - Advanced Web Application Development</div>
                     <div class="week-dates">November 17 - November 23, 2025</div>
                 </div>
                 <div class="week-stats">
