--- a/index.html
+++ b/index.html
@@ -2341,7 +2341,10 @@ document.addEventListener('DOMContentLoaded', function() {
 <div style="display: flex; gap: 30px; justify-content: center; align-items: flex-start; flex-wrap: wrap; margin-top: 30px;">
     <!-- GitHub QR Code -->
     <div style="text-align: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.08);">
-        <h3 style="margin-bottom: 15px; color: #0078d4; font-size: 16px;">🌐 GitHub Availability</h3>
+        <div style="margin-bottom: 15px;">
+            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Logo" style="width: 24px; height: 24px;">
+        </div>
+        <h3 style="margin-bottom: 15px; color: #0078d4; font-size: 16px;">GitHub Availability</h3>
         <div id="qrcode-github"></div>
         <a href="https://htayhlaing-win.github.io/availability/" target="_blank">
             <button style="margin-top: 12px; padding: 8px 16px; font-size: 14px; background-color: #0078d4; color: white; border: none; border-radius: 6px; cursor: pointer;">Visit Site</button>
