--- a/index.html
+++ b/index.html
@@ -2342,7 +2342,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <!-- GitHub QR Code -->
     <div style="text-align: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.08);">
         <div style="margin-bottom: 15px;">
-            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub Logo" style="width: 24px; height: 24px;">
+            <img src="github-icon.png" alt="GitHub Logo" style="width: 24px; height: 24px;">
         </div>
         <h3 style="margin-bottom: 15px; color: #0078d4; font-size: 16px;">GitHub Availability</h3>
         <div id="qrcode-github"></div>
@@ -2354,7 +2354,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <!-- LinkedIn QR Code (positioned to the right) -->
     <div style="text-align: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.08);">
         <div style="margin-bottom: 15px;">
-            <img src="https://cdn-icons-png.flaticon.com/512/61/61109.png" alt="LinkedIn Logo" style="width: 24px; height: 24px;">
+            <img src="linkedin-icon.png" alt="LinkedIn Logo" style="width: 24px; height: 24px;">
         </div>
         <h3 style="margin-bottom: 15px; color: #0077b5; font-size: 16px;">LinkedIn Profile</h3>
         <div id="qrcode-linkedin"></div>
